LAB1_HCMUT/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:48:32 **** Incremental Build of configuration Debug for project Analog_Clock ****
make -j8 all 
arm-none-eabi-gcc -o "Analog_Clock.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\ST\STM32CubeIDE_1.18.1\workspace\HCMUT_LAB\LAB1_HCMUT\Analog_Clock\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Analog_Clock.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Analog_Clock.elf
 
arm-none-eabi-size  Analog_Clock.elf 
arm-none-eabi-objdump -h -S Analog_Clock.elf  > "Analog_Clock.list"
arm-none-eabi-objcopy  -O ihex Analog_Clock.elf  "Analog_Clock.hex"
   text	   data	    bss	    dec	    hex	filename
   4772	     36	   1572	   6380	   18ec	Analog_Clock.elf
Finished building: default.size.stdout
 
Finished building: Analog_Clock.hex
Finished building: Analog_Clock.list
 
 
16:15:07 **** Incremental Build of configuration Debug for project Analog_Clock ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/control_Led.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/control_Led.d" -MT"Core/Src/control_Led.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/control_Led.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/control_Led.c: In function 'control_Clock':
../Core/Src/control_Led.c:45:1: error: 's' undeclared (first use in this function); did you mean 'se'?
   45 | s
      | ^
      | se
../Core/Src/control_Led.c:45:1: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/control_Led.c:45:2: error: expected ';' before '}' token
   45 | s
      |  ^
      |  ;
   46 | }
      | ~ 
make: *** [Core/Src/subdir.mk:37: Core/Src/control_Led.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
16:15:37 **** Incremental Build of configuration Debug for project Analog_Clock ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/control_Led.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/control_Led.d" -MT"Core/Src/control_Led.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/control_Led.o"
arm-none-eabi-gcc -o "Analog_Clock.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\ST\STM32CubeIDE_1.18.1\workspace\HCMUT_LAB\LAB1_HCMUT\Analog_Clock\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Analog_Clock.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Analog_Clock.elf
 
arm-none-eabi-size  Analog_Clock.elf 
arm-none-eabi-objdump -h -S Analog_Clock.elf  > "Analog_Clock.list"
arm-none-eabi-objcopy  -O ihex Analog_Clock.elf  "Analog_Clock.hex"
   text	   data	    bss	    dec	    hex	filename
   4780	     36	   1572	   6388	   18f4	Analog_Clock.elf
Finished building: default.size.stdout
 
Finished building: Analog_Clock.hex
 
Finished building: Analog_Clock.list
 
16:16:38 **** Incremental Build of configuration Debug for project Analog_Clock ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Analog_Clock.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\ST\STM32CubeIDE_1.18.1\workspace\HCMUT_LAB\LAB1_HCMUT\Analog_Clock\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Analog_Clock.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Analog_Clock.elf
 
arm-none-eabi-size  Analog_Clock.elf 
arm-none-eabi-objdump -h -S Analog_Clock.elf  > "Analog_Clock.list"
arm-none-eabi-objcopy  -O ihex Analog_Clock.elf  "Analog_Clock.hex"
   text	   data	    bss	    dec	    hex	filename
   4780	     36	   1572	   6388	   18f4	Analog_Clock.elf
Finished building: default.size.stdout
 
Finished building: Analog_Clock.hex
Finished building: Analog_Clock.list
 
 
16:25:12 **** Incremental Build of configuration Debug for project Analog_Clock ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/control_Led.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/control_Led.d" -MT"Core/Src/control_Led.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/control_Led.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Analog_Clock.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\ST\STM32CubeIDE_1.18.1\workspace\HCMUT_LAB\LAB1_HCMUT\Analog_Clock\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Analog_Clock.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Analog_Clock.elf
 
arm-none-eabi-size  Analog_Clock.elf 
arm-none-eabi-objdump -h -S Analog_Clock.elf  > "Analog_Clock.list"
arm-none-eabi-objcopy  -O ihex Analog_Clock.elf  "Analog_Clock.hex"
   text	   data	    bss	    dec	    hex	filename
   4992	     36	   1596	   6624	   19e0	Analog_Clock.elf
Finished building: default.size.stdout
 
Finished building: Analog_Clock.hex
Finished building: Analog_Clock.list
 
 
16:26:48 **** Incremental Build of configuration Debug for project Analog_Clock ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/control_Led.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/control_Led.d" -MT"Core/Src/control_Led.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/control_Led.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Analog_Clock.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\ST\STM32CubeIDE_1.18.1\workspace\HCMUT_LAB\LAB1_HCMUT\Analog_Clock\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Analog_Clock.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Analog_Clock.elf
 
arm-none-eabi-size  Analog_Clock.elf 
arm-none-eabi-objdump -h -S Analog_Clock.elf  > "Analog_Clock.list"
arm-none-eabi-objcopy  -O ihex Analog_Clock.elf  "Analog_Clock.hex"
   text	   data	    bss	    dec	    hex	filename
   4976	     36	   1596	   6608	   19d0	Analog_Clock.elf
Finished building: default.size.stdout
 
Finished building: Analog_Clock.hex
Finished building: Analog_Clock.list
 
 
